--- a/Style/Signin.css
+++ b/Style/Signin.css
@@ -1,139 +1,145 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color:  rgb(48, 47, 47);
+  background-color: rgb(70, 69, 69);
 }
 
-.container{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: 20%;
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 100px;
 }
 
-.card{
-    background-color: #ffffff80;
-    padding: 30px;
-    border-radius: 2%;
-    box-shadow: 3px 3px 1px 0px #03030395;
-    width: 400px;
+.card {
+  background-color: #ffffff80;
+  padding: 30px;
+  border-radius: 4%;
+  box-shadow: 3px 3px 1px 0px #00000060
 }
 
 h1{
-    text-align: center;
-    margin-bottom: 20px;
-    color: #0d009c
+  text-align: center;
+  margin-bottom: 20px;
+  color: #272262
 }
 
-.linha input{
-    width: 100%;
-    padding: 5px 5px;
-    display: inline-block;
-    border: 0;
-    border-bottom: 2px solid #0d009c;
-    background-color: transparent;
-    outline: none;
-    min-width: 180px;
-    font-size: 16px;
-    border-radius: 0;
+.label-float input{
+  width: 100%;
+  padding: 5px 5px;
+  display: inline-block;
+  border: 0;
+  border-bottom: 2px solid #272262;
+  background-color: transparent;
+  outline: none;
+  min-width: 180px;
+  font-size: 16px;
+  transition: all .3s ease-out;
+  border-radius: 0;
+  
 }
 
-.linha{
-    position: relative;
-    padding-top: 13px;
-    margin-top: 5%;
-    margin-bottom: 5%;
+.label-float{
+  position: relative;
+  padding-top: 13px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
-.linha input:focus{
-    border-bottom: 2px solid #4038a0;
+.label-float input:focus{
+  border-bottom: 2px solid #4038a0;
 }
 
-.linha label{
-    color: transparent;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 13px;
-    margin-top: 0;
-    color: #4038a0
+.label-float label{
+  color: #272262;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 13px;
+  transition: all .3s ease-out;
 }
 
-.centro{
-    display: flex;
-    justify-content: center;
+.label-float input:focus + label,
+.label-float input:valid + label{
+  font-size: 13px;
+  margin-top: 0;
+  color: #4038a0
 }
 
 button{
-    background-color: transparent;
-    color: #0d009c;
-    border-color: #0d009c;
-    padding: 10px 20px;
-    border-radius: 2%;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 3%;
-    margin-bottom: 5%;
-    font-weight: bold;
-} 
+  background-color: transparent;
+  border-color: #272262;
+  color: #272262;
+  padding: 7px;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-top: 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  transition: all .4s ease-out;
+}
 
 button:hover{
-    background-color: #0d009c;
-    color: #ffffff;
-    transition: all .4s ease-in-out;
+  background-color: #272262;
+  color: #fff;
+}
+
+.justify-center{
+  display: flex;
+  justify-content: center;
 }
 
 hr{
-    margin-bottom: 7%;
-    width: 100%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  width: 60%;
 }
 
 p{
-    text-align: center;
-    color: #0d009c;
-    font-size: 14pt;
+  color: #272262;
+  font-size: 14pt;
+  text-align: center;
 }
 
 a{
-    text-decoration: none;
-    color: #110e2e;
-    font-weight: bold;
+  color: #7a3077;
+  font-weight: bold;
+  text-decoration: none;
+  transition: all .3s ease-out;
 }
 
 a:hover{
-    color: #464366;
-    transition: all .3s ease-in-out;
+  color: #272262;
 }
 
 .fa-eye{
-    position: absolute;
-    top: 13px;
-    right: 10px;
-    cursor: pointer;
-    color: #0d009c;
-  }
-
-#msgError{
-    color: #ff0000;
-    background-color: #ffbbbb;
-    border-radius: 4px;
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
-    display: none;
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  cursor: pointer;
+  color: #272262;
 }
 
-#msgSucess{
-    color: #00bb00;
-    background-color: #ffbbfe;
-    border-radius: 4px;
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
-    display: none;
+ #msgError{
+  text-align: center;
+  color: #ff0000;
+  background-color: #ffbbbb;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+#msgSuccess{
+  text-align: center;
+  color: #00bb00;
+  background-color: #bbffbe;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
 }
